# hdx-scraper-cod-population

./: README.md  errors.txt  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/cod_population/: __main__.py  cod-population.py  cod_population.py
src/hdx/scraper/cod_population/config/: hdx_dataset_static.yaml  hdx_hapi_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_cod-population.py  test_cod_population.py
tests/fixtures/: admin0_population.csv  admin1_population.csv  admin2_population.csv  admin3_population.csv  cod_population_admin0.csv  cod_population_admin1.csv  cod_population_admin2.csv  cod_population_admin3.csv  hdx_hapi_population_global.csv  hdx_hapi_population_global_hrp.csv  hdx_hapi_population_global_non_hrp.csv
tests/fixtures/input/: dataset-cod-ps-afg.json  dataset-cod-ps-caf.json  dataset-cod-ps-cod.json  dataset-cod-ps-vct.json  download-afg-admpop-adm1-2021-v2.csv  download-afg-popadm-adm0-2021-v2.csv  download-caf-admpop-adm1-2015-v2.csv  download-caf-admpop-adm2-2015-v2.csv  download-caf-admpop-adm3-2015-v2.csv  download-cod-admpop-adm0-2020.csv  download-cod-admpop-adm1-2020.csv  download-cod-admpop-adm2-2020.csv  download-vct-admpop-2022.xlsx
